<resources>
    <string name="app_name">My Return Visit Diary</string>

    <string name="button_add_contact">Add New Return Visit</string>
    <string name="button_view_contacts">View Return Visits</string>
    <string name="button_backup_restore">Backup / Restore</string>
    <string name="button_about">About</string>
    <string name="button_feedback">Feedback</string>

    <string name="title_add_contact">Add Return Visit</string>
    <string name="title_edit_contact">Edit Return Visit</string>
    <string name="hint_name">Name</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_address">Address</string>
    <string name="button_get_gps_coordinates">Get GPS Coordinates</string>
    <string name="coordinates_not_set">Coordinates: Not set</string>
    <string name="coordinates_format">Coordinates: %1$.4f, %2$.4f</string>
    <string name="hint_subject_discussed">Subject Discussed</string>
    <string name="hint_preferred_callback_days">Preferred Callback Days</string>
    <string name="hint_preferred_callback_time">Preferred Callback Time</string>
    <string name="button_save">Save</string>
    <string name="button_update">Update</string>
    <string name="button_select_image">Select Image</string>

    <string name="title_view_contacts">Return Visits</string>
    <string name="hint_filter_by">Filter by</string>
    <string name="hint_filter_query">Search or Filter</string>
    <string name="empty_contacts_list">No Return Visits found</string>
    <string name="toast_contact_deleted">Return Visit deleted successfully</string>

    <string name="title_backup_restore">Backup &amp; Restore</string>
    <string name="button_backup_contacts">Backup Return Visit</string>
    <string name="button_restore_contacts">Restore Return Visits</string>
    <string name="backup_successful">Backup created successfully.</string>
    <string name="backup_failed">Backup failed.</string>
    <string name="restore_successful">Return Visits restored successfully.</string>
    <string name="restore_failed">Restore failed.</string>
    <string name="no_backup_found">No backup file found.</string>

    <string name="title_contact_details">Return Visit Details</string>
    <string name="action_call">Call</string>
    <string name="action_message">Message</string>
    <string name="action_view_on_map">Map View</string>
    <string name="action_edit_contact">Edit Return Visit</string>

    <string name="title_about">About App</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="app_description">Need a hand keeping track of your return visits? This app makes it super easy to manage all the details, locations, and important info for each one. And hey, if you ever spot a bug or have a brilliant idea for a new feature, just hit that feedback button – we\'d love to hear from you!</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="notification_channel_name">Return Visit Reminders</string>
    <string name="notification_channel_description">Reminders for your return visits.</string>
    <string name="notification_title_format">Return Visit Reminder: %s</string>
    <string name="notification_message_format">It\'s time to follow up with %1$s regarding: %2$s</string>
    <string name="notification_message_no_subject">No specific subject</string>

    <string name="coordinates_format_short">Lat: %.4f, Lon: %.4f</string>
    <string name="location_not_set">Location not set</string>
    <string name="callback_days_format">Callback: %s</string>
    <string name="no_callback_days">No callback days set</string>
    <string name="no_callback_time">No time set</string>
    <string name="contact_added_timestamp_format">Added: %s</string>
    <string name="no_address_set">No address set</string>
    <string name="no_subject_set">No subject set</string>
    <string name="no_callback_days_set">No callback days set</string>
    <string name="no_callback_time_set">No callback time set</string>

    <string name="error_generic">An error occurred. Please try again.</string>
    <string name="dialog_title_permission_required">Permission Required</string>
    <string name="dialog_message_location_permission">This app needs location permission to get your
        current coordinates. Please grant the permission in settings.
    </string>
    <string name="dialog_message_storage_permission_backup">This app needs storage permission to
        back up your contacts. Please grant the permission in settings.
    </string>
    <string name="dialog_message_storage_permission_restore">This app needs storage permission to
        restore your contacts. Please grant the permission in settings.
    </string>
    <string name="button_settings">Settings</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="label_loading">Loading…</string>

    <string name="cd_contact_icon">Contact icon</string>
    <string name="cd_empty_contacts_icon">Icon indicating no return visits</string>
    <string name="cd_icon_person">Person icon</string>
    <string name="cd_icon_phone">Phone icon</string>
    <string name="cd_icon_address">Address icon</string>
    <string name="cd_icon_location">Location pin icon</string>
    <string name="cd_icon_subject">Subject or notes icon</string>
    <string name="cd_icon_calendar_days">Calendar icon for days</string>
    <string name="cd_icon_time">Time or clock icon</string>
    <string name="cd_icon_backup">Backup icon</string>
    <string name="cd_icon_restore">Restore icon</string>
    <string name="cd_icon_add_contact">Add contact icon</string>
    <string name="cd_icon_view_contacts">View contacts icon</string>
    <string name="cd_icon_map">Map icon</string>

    <string name="title_feedback">Send Feedback</string>
    <string name="hint_feedback_subject">Subject</string>
    <string name="hint_feedback_message">Your Feedback / Bug Report</string>
    <string name="button_send_feedback_github">Send via GitHub Issue</string> <string name="button_send_feedback_email">Send via Email</string> <string name="toast_feedback_empty_fields">Subject and message cannot be empty.</string>
    <string name="toast_no_browser_found">No web browser found to open feedback link.</string>
    <string name="toast_no_email_client">No email client found.</string> <string name="feedback_type_bug">Bug Report</string>
    <string name="feedback_type_feature">Feature Request</string>
    <string name="feedback_type_bug_label">Bug</string>
    <string name="feedback_type_feature_label">Feature</string>

    <string name="github_issues_url">https://github.com/techyxal/ReturnVisitApp/issues/new/choose</string>
    <string name="feedback_email_address">your.feedback.techyxal@gmail.com</string> <string-array name="days_of_week">
    <item>Monday</item>
    <item>Tuesday</item>
    <item>Wednesday</item>
    <item>Thursday</item>
    <item>Friday</item>
    <item>Saturday</item>
    <item>Sunday</item>
    <item>Any Day</item>
    <item>Weekdays</item>
    <item>Weekends</item>
</string-array>

    <string-array name="filter_types">
        <item>Name</item>
        <item>Phone</item>
        <item>Subject</item>
        <item>Callback Days</item>
        <item>Location</item>
    </string-array>


    <string name="privacy_policy_message">This application is designed to prioritize user privacy. It does not collect any personal data beyond what users explicitly choose to provide through the feedback mechanism. All return visit information saved within this application is stored exclusively on the user\'s local device. Users acknowledge and accept that they utilize this application at their own risk, and the developers cannot be held liable for any data loss.</string>

    <string name="terms_agreement_title">Terms and Agreement</string>
    <string name="terms_agreement_content">By using this application, you agree to the following terms: This application is designed to prioritize user privacy. It does not collect any personal data beyond what users explicitly choose to provide through the feedback mechanism. All return visit information saved within this application is stored exclusively on the user\'s local device. Users acknowledge and accept that they utilize this application at their own risk, and the developers cannot be held liable for any data loss.</string>
    <string name="button_accept">Accept</string>
    <string name="button_decline">Decline</string>

    <string name="switch_enable_reminders">Enable Reminders for this Contact</string>

    <string name="no_phone_number_set">No phone number set</string>
    reminders_disabled
    <string name="reminders_enabled">Reminders enabled</string>

    <string name="reminders_disabled">Reminders disabled</string>

</resources>
